--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,7 +12,7 @@
   </thead>
 
   <tbody>
-    <% @topics.each do |topic| %>
+  <% @topics.sort_by {|topic| -topic.votes.count}.each do |topic| %>
     <tr>
       <td><%= link_to topic.title, topic %></td>
 
@@ -28,3 +28,6 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
+<br>
+
+<%= link_to 'About', about_path %>
